# assigment1-devscale-AI-Enabled-Python

./: README.md  alembic.ini  app.db  main.py  pyproject.toml  requirements.txt  run.ps1  setup.ps1
alembic/: env.py
alembic/versions/: 1981b5a940ec_create_items_table.py
src/: main.py
src/core/: db.py
src/models/: item_model.py
src/router/: item_router.py
