[project]
name = "aienablade-assigment1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "scalar-fastapi>=0.1.10",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
app = "src.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["uv"]
build-backend = "uv"